--- a/Web-shoppe/index.html
+++ b/Web-shoppe/index.html
@@ -48,7 +48,7 @@
                     </ul>
     
                     <ul class="header__navbar-list">
-                        <li class="header__navbar-item">
+                        <li class="header__navbar-item header__navbar-item--has-notify">
                             <a href="" class="header__navbar-item--link"> 
                                 <i class="header__navbar-icon fas fa-bell"></i>
                                 Thông báo
@@ -63,8 +63,8 @@
                                         <a href="" class="header__notify-link">
                                             <img class="header__notify-img" src="./asset/img/sp1.jpg" alt="">
                                             <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm ohui chính hãng</span>
-                                                <span class="header__notify-desciption">Mô tả mỹ phẩm ohui chính hãng</span>
+                                                <span class="header__notify-name">Mỹ phẩm ohui chính  phẩm ohui chính hãng giúp chhãng</span>
+                                                <span class="header__notify-desciption">Mô tả mỹ phẩm op ch phẩm ohui chính hãng giúp chui chính hãng</span>
                                             </div>
                                         </a>
                                     </li>
@@ -74,7 +74,7 @@
                                             <img class="header__notify-img" src="./asset/img/sp2.jpg" alt="">
                                             <div class="header__notify-info">
                                                 <span class="header__notify-name">Mỹ phẩm ohui chính hãng</span>
-                                                <span class="header__notify-desciption">Mô tả mỹ phẩm ohui chính hãng</span>
+                                                <span class="header__notify-desciption">Mô tả mỹ phẩả mỹ phẩm ohui ả mỹ , cumque cupiditate molestiae deserunt voluptatem voluptatum delg</span>
                                             </div>
                                         </a>
                                     </li>
@@ -84,40 +84,32 @@
                                             <img class="header__notify-img" src="./asset/img/sp3.jpg" alt="">
                                             <div class="header__notify-info">
                                                 <span class="header__notify-name">Mỹ phẩm ohui chính hãng</span>
-                                                <span class="header__notify-desciption">Mô tả mỹ phẩm ohui chính hãng</span>
+                                                <span class="header__notify-desciption">Mô tả 
                                             </div>
                                         </a>
                                     </li>
 
                                     <li class="header__notify-items header__notify-items--viewed">
                                         <a href="" class="header__notify-link">
-                                            <img class="header__notify-img" src="./asset/img/sp3.jpg" alt="">
+                                            <img class="header__notify-img" src="./asset/img/sp4.jpg" alt="">
                                             <div class="header__notify-info">
                                                 <span class="header__notify-name">Mỹ phẩm ohui chính hãng</span>
-                                                <span class="header__notify-desciption">Mô tả mỹ phẩm ohui chính hãng</span>
+                                                <span class="header__notify-desciption">Mô t phẩm ohui híeniti. Ipsa eum cumque cupiditate quisquam! Assumenda, ratione quis?</span>
                                             </div>
                                         </a>
                                     </li>
 
                                     <li class="header__notify-items header__notify-items--viewed">
                                         <a href="" class="header__notify-link">
-                                            <img class="header__notify-img" src="./asset/img/sp3.jpg" alt="">
+                                            <img class="header__notify-img" src="./asset/img/sp5.jpg" alt="">
                                             <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm ohui chính hãng</span>
-                                                <span class="header__notify-desciption">Mô tả mỹ phẩm ohui chính hãng</span>
+                                                <span class="header__notify-name">Hàng son môi chính hãng với mọi người</span>
+                                                <span class="header__notify-desciption">Mô tẩm ohui chính hãng giúp ch phẩm ohui chính hãng giúp chhui chính hãng giúp cho đôi môi của bạn trở nên đẹp hơn</span>
                                             </div>
                                         </a>
                                     </li>
 
-                                    <li class="header__notify-items header__notify-items--viewed">
-                                        <a href="" class="header__notify-link">
-                                            <img class="header__notify-img" src="./asset/img/sp3.jpg" alt="">
-                                            <div class="header__notify-info">
-                                                <span class="header__notify-name">Mỹ phẩm ohui chính hãng</span>
-                                                <span class="header__notify-desciption">Mô tả mỹ phẩmô tả mỹ phẩm ohui chính hãô tả mỹ phẩm ohui chính hã ohui chính hãng lo</span>
-                                            </div>
-                                        </a>
-                                    </li>
+                                   
                                 </ul>
                                 <footer class="header__notify-footer">
                                     <a href="" class="header__notify-footer-btn">Xem tất cả</a>
